@@ -1,5 +1,7 @@
 *unreleased*
 
+* Only make deploy:start, deploy:stop, and deploy:restart try sudo as :runner. The other sudo-enabled tasks (deploy:setup, deploy:cleanup, etc.) will now use the :admin_runner user (which by default is unset). [Jamis Buck]
+
 * Make sure triggers defined as a block inherit the scope of the task they are attached to, instead of the task they were called from [Jamis Buck]
 
 * Make deploy:upload use the upload() helper for more efficient directory processing [Jamis Buck]
